feat: add manual attendance bulk input
